# SkyCast

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: icons.rs  main.rs  print.rs  utils.rs  weather.rs
